background image movile jump fix

--- a/resources/scss/components/_page-background.scss
+++ b/resources/scss/components/_page-background.scss
@@ -5,7 +5,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  height: 100dvh;
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
